# Crew-Ai-Agent-for-Copywriting

./: .dockerignore  CONFIGURAR_VARIAVEIS.md  DEPLOY.md  DEPLOY_RENDER.md  DOCKER_RAPIDO.md  Dockerfile  Dockerfile.backend  FIX_CONFLITO_ANYIO.md  FIX_CONFLITO_PYDANTIC.md  FIX_RENDER.md  FIX_STATUS_128.md  FRONTEND_BACKEND.md  MUDAR_PARA_DOCKER.md  RENDER_SETUP.md  SOLUCAO_DEFINITIVA_RENDER.md  SOLUCAO_RAPIDA.md  SOLUCAO_RENDER_FASTAPI.md  URGENTE_RENDER.md  app.py  backend_api.py  build.sh  docker-compose.yml  render.yaml  render_backend.yaml  requirements.txt  requirements_backend.txt  test_backend.py
.streamlit/: config.toml
output/: briefing.md  copy_final.md  image_url.txt  rascunho_copy.md
projeto_agente/: README.md  pyproject.toml
projeto_agente/src/projeto_agente/: crew.py  main.py  report.md
projeto_agente/src/projeto_agente/create_crew_project/: README.md  pyproject.toml
projeto_agente/src/projeto_agente/create_crew_project/src/create_crew_project/: crew.py  main.py
projeto_agente/src/projeto_agente/create_crew_project/src/create_crew_project/config/: agents.yaml  tasks.yaml
projeto_agente/src/projeto_agente/create_crew_project/src/create_crew_project/output/: briefing.md  copy_final.md  rascunho_copy.md
