[project]
name = "projeto_agente"
version = "0.1.0"
description = "projeto-agente using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
projeto_agente = "projeto_agente.main:run"
run_crew = "projeto_agente.main:run"
train = "projeto_agente.main:train"
replay = "projeto_agente.main:replay"
test = "projeto_agente.main:test"
run_with_trigger = "projeto_agente.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
